[metadata]
name = investment_horse_racing_predict
version = attr: investment_horse_racing_predit.VERSION
url = https://github.com/u6k/investment-horse-racing-predict
author = u6k
author_email = u6k.apps@gmail.com
description = Predict for horse racing
long_description = file: README.md
license = MIT License

[options]
packages = find:

[flake8]
max-line-length = 1000
